@@ -7,6 +7,7 @@ import pl.obiektowe.projekt1.simulator.Interfaces.IPositionChangeObserver;
 import pl.obiektowe.projekt1.simulator.Interfaces.IStatisticObserver;
 import pl.obiektowe.projekt1.simulator.Interfaces.IWorldMap;
 
+import java.awt.*;
 import java.util.*;
 import java.util.concurrent.CopyOnWriteArrayList;
 
@@ -82,8 +83,6 @@ public class EvolutionSimulatorMap implements IPositionChangeObserver, IWorldMap
                 steppe.remove(position);
             }
         }
-
-        addObservers(new Log());
     }
 
     public Vector2d countRightPositionOnTheMap(Vector2d position) {
@@ -106,16 +105,15 @@ public class EvolutionSimulatorMap implements IPositionChangeObserver, IWorldMap
 
     @Override
     public void positionChanged(Vector2d oldPosition, Vector2d newPosition, Object a) {
-        removePositionOfAnimal((Animal) a, oldPosition);
-        addPositionOfAnimal((Animal) a, newPosition);
+        removeAnimal((Animal) a, oldPosition);
+        addAnimal((Animal) a, newPosition);
     }
 
     @Override
     public boolean place(IMapElement element) {
         if (element instanceof Animal) {
-            addPositionOfAnimal((Animal) element, element.getPosition());
+            addAnimal((Animal) element, element.getPosition());
             ((Animal) element).addObservers(this);
-            animalList.add((Animal) element);
         }
         if (element instanceof Plant) {
             if (canPlantBePlaced(element.getPosition())) {
@@ -127,7 +125,7 @@ public class EvolutionSimulatorMap implements IPositionChangeObserver, IWorldMap
         return true;
     }
 
-    public boolean addPositionOfAnimal(Animal newAnimal, Vector2d position) {
+    public boolean addAnimal(Animal newAnimal, Vector2d position) {
         if (newAnimal == null) return false;
         LinkedList<Animal> list = animals.get(position);
         if (list == null) {
@@ -137,11 +135,12 @@ public class EvolutionSimulatorMap implements IPositionChangeObserver, IWorldMap
         } else {
             list.add(newAnimal);
         }
+        animalList.add(newAnimal);
         return true;
     }
 
     //call this method as final in the day
-    public boolean removePositionOfAnimal(Animal animal, Vector2d position) {
+    public boolean removeAnimal(Animal animal, Vector2d position) {
         LinkedList<Animal> list = animals.get(position);
         if (list == null)
             throw new IllegalArgumentException("Animal on position:" + animal.getPosition() + "already not exist");
@@ -157,23 +156,18 @@ public class EvolutionSimulatorMap implements IPositionChangeObserver, IWorldMap
 
     public LinkedList<Animal> removeDeadAnimals() {
         LinkedList<Animal> deadAnimals = new LinkedList<>();
-        LinkedList<Animal> allAnimals = animalList;
-        for (Animal a : allAnimals) {
+        for (Animal a : animalList) {
             if (a.isDead()) {
-                removePositionOfAnimal(a, a.getPosition());
+                removeAnimal(a, a.getPosition());
                 a.removeObservers(this);
                 deadAnimals.add(a);
             }
-        }
-        for(Animal dead: deadAnimals){
-            animalList.remove(dead);
         }
         return deadAnimals;
     }
 
     public void moveAllAnimals() {
-        LinkedList<Animal> allAnimal = animalList;
-        for (Animal a : allAnimal) {
+        for (Animal a : animalList) {
             a.rotate();
             a.move(MoveDirection.FORWARD);
             a.changeEnergy(moveEnergy);
@@ -183,39 +177,33 @@ public class EvolutionSimulatorMap implements IPositionChangeObserver, IWorldMap
 
     public void eating() {
         LinkedList<Plant> eatedPlants = new LinkedList<>();
-        ArrayList<Vector2d> positionsOfAnimals = new ArrayList<>(animals.keySet());
-        LinkedList<Animal> hungryAnimals;
-        for(Vector2d position : positionsOfAnimals){
-            hungryAnimals = animals.get(position);
-            if(plants.get(position)!=null){
-                if(hungryAnimals.size() == 1){
-                    hungryAnimals.get(0).changeEnergy(plantEnergy);
-                }
-                else if (hungryAnimals.size() > 1){
-                    LinkedList<Animal> theStrongestOnes = new LinkedList<>();
-                    theStrongestOnes.add(hungryAnimals.get(0));
-                    for (int i = 1; i < hungryAnimals.size(); i++) {
-                        if (theStrongestOnes.getFirst().getEnergy() < hungryAnimals.get(i).getEnergy()) {
-                            theStrongestOnes.clear();
-                            theStrongestOnes.add(hungryAnimals.get(i));
-                        } else if (theStrongestOnes.getFirst().getEnergy() == hungryAnimals.get(i).getEnergy()) {
-                            theStrongestOnes.add(hungryAnimals.get(i));
-                        }
-                    }
-                    for (Animal animal : theStrongestOnes) {
-                        animal.changeEnergy(plantEnergy / theStrongestOnes.size());
+
+        for (Plant plant : plants.values()) {
+            LinkedList<Animal> hungryAnimals = animals.get(plant.getPosition());
+            if (hungryAnimals != null && hungryAnimals.size() > 0) {
+                LinkedList<Animal> theStrongestOnes = new LinkedList<>();
+                theStrongestOnes.add(hungryAnimals.get(0));
+                for (int i = 1; i < hungryAnimals.size(); i++) {
+                    if (theStrongestOnes.getFirst().getEnergy() < hungryAnimals.get(i).getEnergy()) {
+                        theStrongestOnes.clear();
+                        theStrongestOnes.add(hungryAnimals.get(i));
+                    } else if (theStrongestOnes.getFirst().getEnergy() == hungryAnimals.get(i).getEnergy()) {
+                        theStrongestOnes.add(hungryAnimals.get(i));
                     }
                 }
-                eatedPlants.add(plants.get(position));
+                for (Animal animal : theStrongestOnes) {
+                    animal.changeEnergy(plantEnergy / theStrongestOnes.size());
+                }
+                eatedPlants.add(plant);
             }
         }
+
         for (Plant p : eatedPlants) {
-            plants.remove(p.getPosition());
+            plants.remove(p);
         }
     }
 
     public void reproduction() {
-        LinkedList<Animal> childs = new LinkedList<>();
         for (LinkedList<Animal> animalList : animals.values()) {
             if (animalList != null && animalList.size() >= 2) {
                 if (animalList.size() > 2) {
@@ -226,14 +214,11 @@ public class EvolutionSimulatorMap implements IPositionChangeObserver, IWorldMap
                 if (canCopulate(firstParent) && canCopulate(secondParent)) {
                     Vector2d positionOfChild = randomPositionNextToOtherPosition(firstParent.getPosition());
                     Animal child = firstParent.copulate(secondParent, positionOfChild);
-                    childs.add(child);
+                    place(child);
                     firstParent.increaseNumberOfChild();
                     secondParent.increaseNumberOfChild();
                 }
             }
-        }
-        for(Animal child : childs) {
-            place(child);
         }
     }
 
@@ -299,7 +284,7 @@ public class EvolutionSimulatorMap implements IPositionChangeObserver, IWorldMap
     public boolean placeAnimalInRandomFieldInJungle(){
         Random generator = new Random();
         int sizeOfJungle = jungleHeight * jungleWidth;
-        if(animals.size() == 0 || animals.size()/sizeOfJungle < 0.8){
+        if(animals.size()/sizeOfJungle < 0.8){
             int howMuchTime = 0;
             while(howMuchTime < sizeOfJungle){
                 int newX = generator.nextInt(jungleWidth) + jungleLowerLeft.getX();
@@ -373,20 +358,19 @@ public class EvolutionSimulatorMap implements IPositionChangeObserver, IWorldMap
         return animalList;
     }
 
-    public int getJungleWidth() {
-        return jungleWidth;
-    }
-
-    public int getJungleHeight() {
-        return jungleHeight;
-    }
-
-    public Vector2d getJungleUpperRight() {
-        return jungleUpperRight;
-    }
-
-    public Vector2d getJungleLowerLeft() {
-        return jungleLowerLeft;
+    public Color colorForAnimal(Animal animal) {
+        if (animal.getEnergy() == 0) return new Color(222, 221, 224);
+        if (animal.getEnergy() < 0.2 * startEnergy) return new Color(255, 157, 169, 255);
+        if (animal.getEnergy() < 0.4 * startEnergy) return new Color(255, 110, 124);
+        if (animal.getEnergy() < 0.6 * startEnergy) return new Color(255, 0, 30, 255);
+        if (animal.getEnergy() < 0.8 * startEnergy) return new Color(226, 0, 32);
+        if (animal.getEnergy() < startEnergy) return new Color(205, 0, 32);
+        if (animal.getEnergy() < 2 * startEnergy) return new Color(179, 0, 31);
+        if (animal.getEnergy() < 4 * startEnergy) return new Color(153, 0, 30);
+        if (animal.getEnergy() < 6 * startEnergy) return new Color(131, 0, 28);
+        if (animal.getEnergy() < 8 * startEnergy) return new Color(112, 0, 28);
+        if (animal.getEnergy() < 10 * startEnergy) return new Color(87, 0, 22);
+        return new Color(75, 0, 20);
     }
 
     public int getWidth() {
@@ -397,4 +381,23 @@ public class EvolutionSimulatorMap implements IPositionChangeObserver, IWorldMap
         return height;
     }
 
+    public Vector2d getJungleUpperRight() {
+        return jungleUpperRight;
+    }
+
+    public Vector2d getJungleLowerLeft() {
+        return jungleLowerLeft;
+    }
+
+    public int getStartEnergy() {
+        return startEnergy;
+    }
+
+    public int getJungleWidth() {
+        return jungleWidth;
+    }
+
+    public int getJungleHeight() {
+        return jungleHeight;
+    }
 }
